# QHexView

./: .gitignore  CMakeLists.txt  LICENSE  QHexEdit.pri  QHexEdit.pro  QHexView.pri  README.md  piece.h  qhexedit.cpp  qhexedit.h  qhexeditcomments.cpp  qhexeditcomments.h  qhexeditdata.cpp  qhexeditdata.h  qhexeditdatadevice.cpp  qhexeditdatadevice.h  qhexeditdatamanager.cpp  qhexeditdatamanager.h  qhexeditdatareader.cpp  qhexeditdatareader.h  qhexeditdatawriter.cpp  qhexeditdatawriter.h  qhexedithighlighter.cpp  qhexedithighlighter.h  qhexeditprivate.cpp  qhexeditprivate.h  qhexview.cpp  qhexview.h  sparserangemap.cpp  sparserangemap.h  undocommands.cpp  undocommands.h
dialogs/: hexfinddialog.cpp  hexfinddialog.h
document/: gapbuffer.cpp  gapbuffer.h  qhexcursor.cpp  qhexcursor.h  qhexdocument.cpp  qhexdocument.h  qhexmetadata.cpp  qhexmetadata.h  qhexrenderer.cpp  qhexrenderer.h  qhextheme.cpp  qhextheme.h
document/buffer/: qfilebuffer.cpp  qfilebuffer.h  qhexbuffer.cpp  qhexbuffer.h  qmemorybuffer.cpp  qmemorybuffer.h  qmemoryrefbuffer.cpp  qmemoryrefbuffer.h
document/commands/: hexcommand.cpp  hexcommand.h  insertcommand.cpp  insertcommand.h  removecommand.cpp  removecommand.h  replacecommand.cpp  replacecommand.h
document/metadata/: qhexmetadata.cpp  qhexmetadata.h  qhexmetadataitem.cpp  qhexmetadataitem.h
example/: CMakeLists.txt  main.cpp
include/QHexView/: qhexview.h
include/QHexView/model/: qhexdelegate.h  qhexdocument.h  qhexoptions.h
include/QHexView/model/buffer/: qhexbuffer.h
model/: qhexcursor.cpp  qhexcursor.h  qhexdelegate.cpp  qhexdelegate.h  qhexdocument.cpp  qhexdocument.h  qhexmetadata.cpp  qhexmetadata.h  qhexoptions.h  qhexrenderdelegate.cpp  qhexrenderdelegate.h  qhexutils.cpp  qhexutils.h
model/buffer/: qdevicebuffer.cpp  qdevicebuffer.h  qfilebuffer.cpp  qfilebuffer.h  qhexbuffer.cpp  qhexbuffer.h  qmappedfilebuffer.cpp  qmappedfilebuffer.h  qmemorybuffer.cpp  qmemorybuffer.h  qmemoryrefbuffer.cpp  qmemoryrefbuffer.h
model/commands/: hexcommand.cpp  hexcommand.h  insertcommand.cpp  insertcommand.h  removecommand.cpp  removecommand.h  replacecommand.cpp  replacecommand.h
paint/: qhexmetrics.cpp  qhexmetrics.h  qhexpainter.cpp  qhexpainter.h
src/: qhexview.cpp
src/model/: qhexdelegate.cpp  qhexdocument.cpp
src/model/buffer/: qhexbuffer.cpp
